tests/invalid/undef_symbol.err_exp
undef_symbol.m:018: In clause for predicate `main'/2:
undef_symbol.m:018:   error: undefined predicate `undef_symbol.r'/2.
undef_symbol.m:023: In clause for predicate `p'/2:
undef_symbol.m:023:   error: undefined predicate `string.append'/3.
undef_symbol.m:023:   (The module `string' has not been imported.)
undef_symbol.m:029: In clause for predicate `q'/2:
undef_symbol.m:029:   error: undefined symbol `term.context'/2.
undef_symbol.m:029:   (The module `term' has not been imported.)
